--- a/index.html
+++ b/index.html
@@ -7,34 +7,38 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h1>Team Member Random Selector</h1>
+  <header>
+    <h1>Team Member Random Selector</h1>
+  </header>
 
-  <section>
-    <h2>Create Team</h2>
-    <input id="teamName" placeholder="Team name" />
-    <button onclick="addTeam()">Add Team</button>
-  </section>
+  <main>
+    <div class="card">
+      <h2>Create Team</h2>
+      <input id="teamName" placeholder="Team name" />
+      <button onclick="addTeam()">Add Team</button>
+    </div>
 
-  <section>
-    <h2>Teams</h2>
-    <select id="teamSelect" onchange="renderMembers()"></select>
-  </section>
+    <div class="card">
+      <h2>Teams</h2>
+      <select id="teamSelect" onchange="renderMembers()"></select>
+    </div>
 
-  <section>
-    <h2>Add Member</h2>
-    <input id="memberName" placeholder="Member name" />
-    <button onclick="addMember()">Add Member</button>
-  </section>
+    <div class="card">
+      <h2>Add Member</h2>
+      <input id="memberName" placeholder="Member name" />
+      <button onclick="addMember()">Add Member</button>
+    </div>
 
-  <section>
-    <h2>Members</h2>
-    <ul id="memberList"></ul>
-  </section>
+    <div class="card">
+      <h2>Members</h2>
+      <ul id="memberList"></ul>
+    </div>
 
-  <section>
-    <button class="select-btn" onclick="selectMembers()">Select Members</button>
-    <pre id="results"></pre>
-  </section>
+    <div class="card">
+      <button class="select-btn" onclick="selectMembers()">Select Members</button>
+      <pre id="results"></pre>
+    </div>
+  </main>
 
   <script src="app.js"></script>
 </body>
